Refactor to latest java features